<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
                android:title="@string/shop"
                android:icon="@drawable/ic_shirt_white"
                android:id="@+id/shoppingDrawer"/>
        <item
                android:title="@string/my_account"
                android:icon="@drawable/ic_account_logo_black"
                android:id="@+id/myAccountDrawer"/>
        <item
                android:title="@string/my_saves"
                android:icon="@drawable/ic_heart_white"
                android:id="@+id/mySavesDrawer"/>
        <item
                android:title="@string/scan_to_shop"
                android:icon="@drawable/ic_camera_alt_white"
                android:id="@+id/scanToShop"/>
        <item
                android:title="@string/inbox"
                android:icon="@drawable/ic_chat_bubble_white"
                android:id="@+id/inboxDrawer"/>
    </group>
</menu>